--- a/original robin's nest/robinsnest/styles.css
+++ b/original robin's nest/robinsnest/styles.css
@@ -1,96 +1,118 @@
-/* Example 26-13: styles.css */
+/* Example 21-13: styles.css */
 
 * {
-  font-family:verdana,sans-serif;
-  font-size  :14pt;
+	font-family: verdana, sans-serif;
+	font-size : 14pt;
 }
-
 body {
-  width     :700px;
-  margin    :20px auto;
-  background:#f8f8f8;
-  border    :1px solid #888;
+	width : 90%;
+	margin : 7px auto;
+	background: #ecf0f1;
+	border : 1px solid #888;
+}
+html {
+	background: #95a5a6;
 }
 
-html {
-  background:#fff
+.centered {
+	width: 80%;
+	height: 100%;
+	margin: 0 auto;
+	padding-bottom: 20px;
+    background-color: #ecf0f1;
+}
+
+.text-info {
+	text-align: center;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 img {
-  border            :1px solid black;
-  margin-right      :15px;
-  -moz-box-shadow   :2px 2px 2px #888;
-  -webkit-box-shadow:2px 2px 2px #888;
-  box-shadow        :2px 2px 2px #888;
+	border : 1px solid black;
+	margin-right : 15px;
+	-moz-box-shadow : 2px 2px 2px #888;
+	-webkit-box-shadow: 2px 2px 2px #888;
+	box-shadow : 2px 2px 2px #888;
 }
 
+.menu {
+	text-align: center;
+}
 li a, .button {
-  text-decoration:none;
+	text-decoration: none;
+}
+li a:hover, .button:hover {
+	color: green;
+}
+.appname {
+	text-align : center;
+	background : #34495e;
+	color : #ecf0f1;
+	font-family: helvetica;
+	font-size : 24pt;
+	padding : 12px;
 }
 
-li a:hover, .button:hover {
-  color:green;
+.backRob {
+	text-align : center;
+	background : #7f8c8d;
+	color : #ecf0f1;
+	font-family: helvetica;
+	font-size : 14pt;
+	padding : 5px;
+	margin:0px;
+	text-decoration: none;
 }
- 
-.appname {
-  text-align :center;
-  background :#eb8;
-  color      :#40d;
-  font-family:helvetica;
-  font-size  :20pt;
-  padding    :4px;
+
+.backRob a {
+	color: #1abc9c;
+	text-decoration: none;
 }
 
 .fieldname {
-  float:left;
-  width:120px;
+	float: left;
+	width: 120px;
 }
-
 .main {
-  margin-left:40px;
+	margin-left: 40px;
+	margin-right: 40px;
 }
-
 .info {
-  background :lightgreen;
-  color      :blue;
-	border     :1px solid green;
-	padding    :5px 10px;
-  margin-left:40px;
+	background : lightgreen;
+	color : blue;
+	border : 1px solid green;
+	padding : 5px 10px;
+	margin-left: 40px;
 }
-
 .menu li, .button {
-  display           :inline;
-  padding           :4px 6px;
-  border            :1px solid #777;
-  background        :#ddd;
-	color             :#d04;
-  margin-right      :8px;
-	border-radius     :5px;
-	-moz-box-shadow   :2px 2px 2px #888;
-	-webkit-box-shadow:2px 2px 2px #888;
-	box-shadow        :2px 2px 2px #888;
+	display : inline;
+	padding : 4px 6px;
+	border : 1px solid #777;
+	background : #ddd;
+	color : #d04;
+	margin-right : 8px;
+	border-radius : 5px;
+	-moz-box-shadow : 2px 2px 2px #888;
+	-webkit-box-shadow: 2px 2px 2px #888;
+	box-shadow : 2px 2px 2px #888;
 }
-
 .subhead {
-  font-weight:bold;
+	font-weight: bold;
 }
-
 .taken, .error {
-  color:red;
+	color: red;
 }
-
 .available {
-  color:green;
+	color: green;
 }
-
 .whisper {
-  font-style:italic;
-  color     :#006600;
+	font-style: italic;
+	color : #006600;
 }
 
-#logo {
-  font-family:Georgia;
-  font-weight:bold;
-  font-style:italic;
-  font-size :97px;
+/*Geolocation css*/
+
+#location_pane > p {
+	text-align: center;
 }
